# IERR_Self

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/ierr/: error.h  hal.h  ierr.h
src/: iree_arm_runtime.c  iree_arm_runtime.h  main.c
src/hal/sim/: sim_hal.cpp
src/kernels/cpu/: add.cpp  matmul.cpp  relu.cpp
src/runtime/: graph.cpp  logging.cpp  logging.h  op_registry.cpp  op_registry.h  runtime.cpp
tests/: test_hal_sim.cpp  test_harness.h  test_kernels.cpp  test_main.cpp  test_runtime.cpp
toolchains/: aarch64-linux.cmake  armv7-linux.cmake
tools/model_runner/: main.cpp
